# cricket-analytics

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.api  Makefile  README.md  docker-compose.yml  player_photo_viewer.html  pyproject.toml  render.yaml
.github/workflows/: ci.yml
.kiro/hooks/: block-destructive-ops.kiro.hook  fix-lint-on-write.kiro.hook  lint-before-push.kiro.hook
.kiro/steering/: api-endpoints-reference.md  cricsheet-data-reference.md  dbt-models-reference.md  progress.md  project-architecture.md
apps/web/: next.config.ts  package-lock.json
config/: datasets.yml
docs/: MIGRATION.md  architecture.md  auction-data-research.md  auction-seed-process.md  data-enrichment-strategy.md  espn-ball-data-scraping.md  espn-json-field-reference.md  image-strategy.md  obt-field-catalog.md  open-meteo-weather-api-reference.md  ui-design-notes.md
docs/adr/: 001-duckdb-as-storage.md  002-image-serving-strategy.md  003-monorepo-with-nested-frontend-git.md  004-natural-keys-over-surrogate-keys.md  005-format-agnostic-schema-design.md  006-analytical-data-shapes-post-gold.md  007-point-in-time-correctness.md
scripts/: geocode_all_results.csv  geocode_all_venues.py  google_geocode_test.py  nominatim_poc.py  nominatim_results.csv  setup_new_laptop.sh  wikidata_geocode_test.py  wikidata_results.csv
src/: __init__.py  config.py  database.py  tables.py  utils.py
src/api/: app.py  database.py  match_summary.py
src/dbt/: .user.yml  dbt_project.yml  profiles.yml
src/enrichment/: __init__.py  ball_data_scraper.py  ball_data_scraper_v2.py  ball_scraper.py  bronze_loader.py  espn_client.py  geocoder.py  image_downloader.py  image_scraper.py  match_scraper.py  queries.py  run.py  run_ball_scraper.py  run_ball_scraper_v2.py  run_match_scraper.py  series_resolver.py  weather_fetcher.py
src/ingestion/: bronze_loader.py  download_people.py  downloader.py  run.py
src/orchestration/: __init__.py  jobs.py  resources.py
src/ui/: app.py  data.py
tests/: __init__.py  conftest.py  test_placeholder.py
(+137 files in other folders)
