[project]
name = "cricket-analytics"
version = "0.1.0"
description = "End-to-end cricket analytics platform built on IPL data from Cricsheet"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "shyamdr" }]

dependencies = [
    "duckdb>=1.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "structlog>=24.0.0",
]

[project.optional-dependencies]
dbt = [
    "dbt-core>=1.8.0",
    "dbt-duckdb>=1.8.0",
]
orchestration = [
    "dagster>=1.7.0",
    "dagster-webserver>=1.7.0",
    "dagster-duckdb>=0.23.0",
    "dagster-dbt>=0.23.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]
ui = [
    "streamlit>=1.38.0",
    "plotly>=5.24.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "black>=25.1.0,<27",
    "pre-commit>=3.8.0",
    "mypy>=1.11.0",
]
all = [
    "cricket-analytics[dbt,orchestration,api,ui,dev]",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
markers = [
    "unit: pure logic tests, no DB needed",
    "integration: tests that hit the real DuckDB",
    "smoke: quick sanity checks",
]
